--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -14,13 +14,17 @@
   <body>
     <header>
       <nav>
+      <div class="navLeft">
         <img src="images/logo.svg" alt=".." />
+      </div>
         <ul id="myLinks">
+          <div class="primaryNav">
           <li><a href="#">HOME</a></li>
           <li><a href="#">ABOUT</a></li>
           <li><a href="#">CONTACT</a></li>
           <li><a href="#">SIGN IN</a></li>
-          <li class="registerCTA">SIGN UP<a href="#"></a></li>
+        </div>
+          <li class="registerCTA"><a href="#">SIGN UP</a></li>
         </ul>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
